cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09687_372282343.yaml
Resources:
  AcertusAdminVpc47E30E0F:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/Resource
  AcertusAdminVpcadminpublicsubSubnet1SubnetD015648A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: adminpublicsub
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1/Subnet
  AcertusAdminVpcadminpublicsubSubnet1RouteTable6C430541:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1/RouteTable
  AcertusAdminVpcadminpublicsubSubnet1RouteTableAssociation3465FA41:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpublicsubSubnet1RouteTable6C430541
      SubnetId:
        Ref: AcertusAdminVpcadminpublicsubSubnet1SubnetD015648A
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1/RouteTableAssociation
  AcertusAdminVpcadminpublicsubSubnet1DefaultRoute8DE05EEC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpublicsubSubnet1RouteTable6C430541
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: AcertusAdminVpcIGWCF6B1851
    DependsOn:
      - AcertusAdminVpcVPCGW3186C63F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1/DefaultRoute
  AcertusAdminVpcadminpublicsubSubnet1EIP6BC6C42A:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1/EIP
  AcertusAdminVpcadminpublicsubSubnet1NATGatewayF3883B66:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: AcertusAdminVpcadminpublicsubSubnet1SubnetD015648A
      AllocationId:
        Fn::GetAtt:
          - AcertusAdminVpcadminpublicsubSubnet1EIP6BC6C42A
          - AllocationId
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet1/NATGateway
  AcertusAdminVpcadminpublicsubSubnet2Subnet71DF4CF4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: adminpublicsub
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet2
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet2/Subnet
  AcertusAdminVpcadminpublicsubSubnet2RouteTableC49C4369:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet2
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet2/RouteTable
  AcertusAdminVpcadminpublicsubSubnet2RouteTableAssociation8D6DAF72:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpublicsubSubnet2RouteTableC49C4369
      SubnetId:
        Ref: AcertusAdminVpcadminpublicsubSubnet2Subnet71DF4CF4
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet2/RouteTableAssociation
  AcertusAdminVpcadminpublicsubSubnet2DefaultRoute58CA9E7D:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpublicsubSubnet2RouteTableC49C4369
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: AcertusAdminVpcIGWCF6B1851
    DependsOn:
      - AcertusAdminVpcVPCGW3186C63F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpublicsubSubnet2/DefaultRoute
  AcertusAdminVpcadminpriivatesubSubnet1SubnetCE3FBBCB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: adminpriivatesub
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet1
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet1/Subnet
  AcertusAdminVpcadminpriivatesubSubnet1RouteTableCB75ACA6:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet1
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet1/RouteTable
  AcertusAdminVpcadminpriivatesubSubnet1RouteTableAssociationCE7A79F0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpriivatesubSubnet1RouteTableCB75ACA6
      SubnetId:
        Ref: AcertusAdminVpcadminpriivatesubSubnet1SubnetCE3FBBCB
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet1/RouteTableAssociation
  AcertusAdminVpcadminpriivatesubSubnet1DefaultRoute4A1890C6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpriivatesubSubnet1RouteTableCB75ACA6
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: AcertusAdminVpcadminpublicsubSubnet1NATGatewayF3883B66
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet1/DefaultRoute
  AcertusAdminVpcadminpriivatesubSubnet2Subnet3D971429:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: adminpriivatesub
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet2
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet2/Subnet
  AcertusAdminVpcadminpriivatesubSubnet2RouteTableC363C5D3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet2
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet2/RouteTable
  AcertusAdminVpcadminpriivatesubSubnet2RouteTableAssociationA026A67A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpriivatesubSubnet2RouteTableC363C5D3
      SubnetId:
        Ref: AcertusAdminVpcadminpriivatesubSubnet2Subnet3D971429
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet2/RouteTableAssociation
  AcertusAdminVpcadminpriivatesubSubnet2DefaultRoute123379AA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: AcertusAdminVpcadminpriivatesubSubnet2RouteTableC363C5D3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: AcertusAdminVpcadminpublicsubSubnet1NATGatewayF3883B66
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/adminpriivatesubSubnet2/DefaultRoute
  AcertusAdminVpcIGWCF6B1851:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/Acertus-Admin-Vpc
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/IGW
  AcertusAdminVpcVPCGW3186C63F:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
      InternetGatewayId:
        Ref: AcertusAdminVpcIGWCF6B1851
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/Acertus-Admin-Vpc/VPCGW
  ADMINUIcluster37FBCEC6:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: ADMINUI-cluster
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-cluster/Resource
  ASGInstanceSecurityGroup0525485D:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AcertusEcsCdkStack/ASG/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/ASG
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ASG/InstanceSecurityGroup/Resource
  ASGInstanceRoleE263A41B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: AcertusEcsCdkStack/ASG
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ASG/InstanceRole/Resource
  ASGInstanceProfile0A2834D7:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: ASGInstanceRoleE263A41B
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ASG/InstanceProfile
  ASGLaunchConfigC00AF12B:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      IamInstanceProfile:
        Ref: ASGInstanceProfile0A2834D7
      SecurityGroups:
        - Fn::GetAtt:
            - ASGInstanceSecurityGroup0525485D
            - GroupId
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - ASGInstanceRoleE263A41B
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ASG/LaunchConfig
  ASG46ED3070:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: "1"
      MinSize: "1"
      LaunchConfigurationName:
        Ref: ASGLaunchConfigC00AF12B
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: AcertusEcsCdkStack/ASG
      VPCZoneIdentifier:
        - Ref: AcertusAdminVpcadminpriivatesubSubnet1SubnetCE3FBBCB
        - Ref: AcertusAdminVpcadminpriivatesubSubnet2Subnet3D971429
    UpdatePolicy:
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: true
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ASG/ASG
  ADMINUItarget4447C28C:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /health
      HealthCheckProtocol: HTTP
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: "false"
      TargetType: ip
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-target/Resource
  ADMINUIelbF2DCA85C:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - ADMINUIelbSecurityGroupA234DE9A
            - GroupId
        - Fn::GetAtt:
            - ADMINUIelbSG38B39318
            - GroupId
      Subnets:
        - Ref: AcertusAdminVpcadminpublicsubSubnet1SubnetD015648A
        - Ref: AcertusAdminVpcadminpublicsubSubnet2Subnet71DF4CF4
      Type: application
    DependsOn:
      - AcertusAdminVpcadminpublicsubSubnet1DefaultRoute8DE05EEC
      - AcertusAdminVpcadminpublicsubSubnet2DefaultRoute58CA9E7D
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-elb/Resource
  ADMINUIelbSecurityGroupA234DE9A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB AcertusEcsCdkStackADMINUIelb5F8A9A2C
      SecurityGroupEgress:
        - CidrIp: 255.255.255.255/32
          Description: Disallow all traffic
          FromPort: 252
          IpProtocol: icmp
          ToPort: 86
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-elb/SecurityGroup/Resource
  ADMINUIelbListener7C84D2DC:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ADMINUItarget4447C28C
          Type: forward
      LoadBalancerArn:
        Ref: ADMINUIelbF2DCA85C
      Certificates:
        - CertificateArn: arn:aws:acm:ap-south-1:665106695518:certificate/d55e09cc-f9e7-4b8e-9c69-0d85bcd24436
      Port: 443
      Protocol: HTTPS
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-elb/Listener/Resource
  ADMINUIelbSG38B39318:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AcertusEcsCdkStack/ADMINUI-elbSG
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow https traffic
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-elbSG/Resource
  ADMINUIs3bucket1C228FDF:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: adminui-assets
      CorsConfiguration:
        CorsRules:
          - AllowedMethods:
              - GET
            AllowedOrigins:
              - "*"
            MaxAge: 3000
      WebsiteConfiguration:
        IndexDocument: index.html
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-s3-bucket/Resource
  ADMINUIs3bucketPolicy3C707D0B:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket:
        Ref: ADMINUIs3bucket1C228FDF
      PolicyDocument:
        Statement:
          - Action: s3:GetObject
            Effect: Allow
            Principal:
              AWS: "*"
            Resource:
              Fn::Join:
                - ""
                - - Fn::GetAtt:
                      - ADMINUIs3bucket1C228FDF
                      - Arn
                  - /*
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-s3-bucket/Policy/Resource
  ADMINUItaskrole535EE5EA:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Description: Role that the api task definitions use to run the api code
      RoleName: ADMINUI-task-role
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-task-role/Resource
  ADMINUItaskpolicy1D7706DB:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: S3:*
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - ADMINUIs3bucket1C228FDF
                - Arn
          - Action: dynamodb:*
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: ADMINUItaskpolicy1D7706DB
      Roles:
        - Ref: ADMINUItaskrole535EE5EA
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-task-policy/Resource
  ADMINUItask270C8FE6:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Join:
              - ""
              - - 665106695518.dkr.ecr.ap-south-1.
                - Ref: AWS::URLSuffix
                - /adminui1:latest
          Memory: 512
          Name: ADMINUI-container
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - ADMINUItaskExecutionRole8BA55C15
          - Arn
      Family: ADMINUI-task
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - EC2
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - ADMINUItaskrole535EE5EA
          - Arn
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-task/Resource
  ADMINUItaskExecutionRole8BA55C15:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-task/ExecutionRole/Resource
  ADMINUItaskExecutionRoleDefaultPolicy4E77BE3A:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource: arn:aws:ecr:ap-south-1:665106695518:repository/adminui1
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: ADMINUItaskExecutionRoleDefaultPolicy4E77BE3A
      Roles:
        - Ref: ADMINUItaskExecutionRole8BA55C15
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-task/ExecutionRole/DefaultPolicy/Resource
  ADMINUIecsSG0079FB76:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AcertusEcsCdkStack/ADMINUI-ecsSG
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: AcertusAdminVpc47E30E0F
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-ecsSG/Resource
  ADMINUIecsSGfromAcertusEcsCdkStackADMINUIelbSG5208A5CBALLPORTS401500C6:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Application load balancer
      FromPort: 0
      GroupId:
        Fn::GetAtt:
          - ADMINUIecsSG0079FB76
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - ADMINUIelbSG38B39318
          - GroupId
      ToPort: 65535
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/ADMINUI-ecsSG/from AcertusEcsCdkStackADMINUIelbSG5208A5CB:ALL PORTS
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/31RTW/CMAz9LdyzMNgOOw7YhJDQVBW0uwkGDCWp4gSEqv73uR/Qboed/Pz6+mI/j/T4+VU/D97hyk9mexoWxnnUxSqAOakU2UVvUM12NgEPZwzo1cxZDj6aUNF9iXzYUiBnS1XZFWi8TjF3TMH52xQYFZqxLr5zU8m/k5lK4iYjs4obi7Vdh1IXA65hk2HHd9yE2RmC6rGHuAKfi6QqXxDmEPAKN5V4ugjsjBdWlhB8FzSTtN0kyOKHM9qgVmiip3CbexfzeoZ/iYXde2QuZUXWxSyLXGclqbRwDXz6wB1Zuk/9l3E2AFn0HSdBxuDYQEZ2r4uJNKumeQyxhGjNQf7d0T76RyJ/paUiOOsidU2e97qQU4I1mHi3I6ESJ+eoM2mQrJMBBzKZg+0GMtGK40WOOMlzEdTvrcHvJc/7RP22p1qKw7R2aHL51fd1JHHZVtPiUvGLLq [...]
    Metadata:
      aws:cdk:path: AcertusEcsCdkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
